# qm

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.hpp  main.cpp
containers/: CMakeLists.txt  array.hpp  matrix.hpp
math/: CMakeLists.txt  equation_system.hpp  functional.hpp  helpers.hpp  jacobian_approx.hpp  linalg.hpp  lup_solver.hpp
